<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.owlplug</groupId>
	<artifactId>owlplug</artifactId>
	<version>1.29.2</version>
	<packaging>pom</packaging>


	<name>owlplug</name>
	<url>https://owlplug.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<javafx.version>21.0.2</javafx.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

    <modules>
		<module>owlplug-client</module>
		<module>owlplug-host</module>
        <module>owlplug-controls</module>
		<module>owlplug-parsers</module>
	</modules>

</project>
